# freddy-backend-client

./: .gitignore  README.md  pyproject.toml
freddy_client/: __init__.py
freddy_client/api/admin_cache/: clear_all_caches_v1_admin_cache_clear_all_post.py  (+1 more)
freddy_client/models/: __init__.py  accept_invitation_v1_invitations_accept_post_response_accept_invitation_v1_invitations_accept_post.py  access_level.py  access_right_grant_request.py  access_right_list_response.py  access_right_response.py  api_key_action_response.py  api_key_create.py  api_key_create_response.py  api_key_daily_usage_response.py  api_key_daily_usage_response_period.py  api_key_limit.py  api_key_list_response.py  api_key_response.py  api_key_rotate_response.py  api_key_update.py  api_key_usage_detail.py  api_key_usage_detail_limit.py  api_key_usage_detail_usage.py  api_key_usage_summary.py  api_limits.py  apply_mode.py  assistant_create.py  assistant_create_json_schemas_type_0_item.py  assistant_create_logit_bias_type_0.py  assistant_create_metadata_type_0.py  assistant_create_system_message_type_0_item.py  assistant_create_text_config_type_0.py  assistant_list_response.py  assistant_response.py  assistant_response_logit_bias_type_0.py  assistant_response_metadata_type_0.py  assistant_response_system_message_type_0_item.py  assistant_response_text_config_type_0.py  assistant_response_tool_capabilities_type_0.py  assistant_standard_response.py  assistant_summary_response.py  assistant_update.py  assistant_update_assistant_metadata_type_0.py  assistant_update_logit_bias_type_0.py  (+280 more)
(+180 files in other folders)
