[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freddy-backend-client"
version = "0.1.0"
description = "Python client for Freddy Backend API"
requires-python = ">=3.8"
readme = "README.md"  # Add this
license = {text = "MIT"}  # Or your chosen license
authors = [
    {name = "Aitronos", email = "ananthu.mn@aitronos.com"}
]
keywords = ["freddy", "api", "client", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.20.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["freddy_client*"]

[tool.setuptools.package-data]
freddy_client = ["py.typed"]
